[gd_scene load_steps=49 format=2]

[ext_resource path="res://Sprites/Amiga Amiga CD32 - Chaos Engine Amiga CD32 - World 2 - Guard.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Amiga Amiga CD32 - Chaos Engine Amiga CD32 - Miscellaneous.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Mobs/1Guard.gd" type="Script" id=3]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=44]
radius = 9.0

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 345, 2, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 378, 2, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 411, 2, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 444, 2, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 477, 2, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 510, 2, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 543, 2, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 2, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 609, 2, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 642, 2, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1, 67, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 34, 67, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 67, 67, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 100, 67, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 133, 67, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 166, 67, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 199, 67, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1, 100, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 34, 100, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 67, 100, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 100, 100, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 133, 100, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 166, 100, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 199, 100, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1, 34, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 34, 34, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 67, 34, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 100, 34, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 133, 34, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 166, 34, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 199, 34, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1, 1, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 34, 1, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 67, 1, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 100, 1, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 133, 1, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 166, 1, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 199, 1, 32, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "WalkDown",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "WalkLeft",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "WalkRight",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "WalkUp",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=41]
radius = 81.0

[sub_resource type="CapsuleShape2D" id=42]
radius = 20.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=43]
radius = 21.0
height = 2.0

[node name="1Guard" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 98
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 44 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "WalkDown"
frame = 2
playing = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 41 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 256

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 42 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
modulate = Color( 0.627451, 0.866667, 0.427451, 1 )
collision_layer = 256
collision_mask = 128

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 43 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
